add data layer setup

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,14 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        buildConfigField "String", "BASE_URL", '"https://bersihkanbersama-koohbbkj7a-et.a.run.app/"'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
 
     buildTypes {
