--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bersihkanbersama"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.detailarticle.DetailArticleActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.onboarding.OnBoardingActivity"
             android:exported="true"
             android:label="@string/title_activity_onboarding"
             android:theme="@style/Base.Theme.OnBoardingBersihkanbersama">
-<!--             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> -->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
-        <activity 
+        <activity
             android:name=".ui.addhasilkilo.AddHasilKiloActivity"
             android:exported="false" />
         <activity
@@ -47,11 +53,11 @@
         <activity
             android:name=".ui.SplashActivity"
             android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.aksiberlangsung.AksiBerlangsungActivity"
